Fix article detail overflow (#200)

--- a/svjis/articles/static/css/styles.css
+++ b/svjis/articles/static/css/styles.css
@@ -946,6 +946,10 @@ footer a:hover {
 
   /* Article */
 
+  .article-detail {
+    overflow: scroll;
+  }
+
   .back_to_list {
     display: block;
   }
